--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - go get -t -v ./...
   - diff -u <(echo -n) <(go fmt ./...)
   - go tool vet .
-  - sudo go test -v -race ./...
+  - go test -v -race ./...
