--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - go get -t -v ./...
   - diff -u <(echo -n) <(go fmt ./...)
   - go tool vet .
+  - which go
   - sudo /usr/local/go/bin/go test -v -race ./...
