--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,4 @@ script:
   - go get -t -v ./...
   - diff -u <(echo -n) <(go fmt ./...)
   - go tool vet .
-  - which go
-  - sudo /usr/local/go/bin/go test -v -race ./...
+  - sudo `which go` test -v -race ./...
