--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
-sudo: false
+sudo: required
 language: go
 go:
-  - 1.11.x
-  - 1.12.x
   - 1.13.x
 install:
   - # Do nothing. This is needed to prevent default install action
   - # "go get -t -v ./..." from happening here (we want it to happen inside script step).
 script:
   - go get -t -v ./...
-  - diff -u <(echo -n) <(gofmt -d -s .)
-  - go tool vet .
-  - go test -v -race ./...
+  - diff -u <(echo -n) <(go fmt ./...)
+  - go vet .
+  - sudo `which go` test -v -race ./...
